--- a/css/media-query.css
+++ b/css/media-query.css
@@ -56,10 +56,6 @@
     margin-bottom: 20px;
     /* height: 250px; */
   }
-
-  .skills .skills-content .column {
-    width: 100%;
-  }
 }
 
 @media (max-width: 690px) {
@@ -106,8 +102,7 @@
     font-size: 27px;
   }
 
-  .about .about-content .right .text,
-  .skills .skills-content .left .text {
+  .about .about-content .right .text {
     font-size: 19px;
   }
 
