--- a/css/skills.css
+++ b/css/skills.css
@@ -21,53 +21,93 @@
 }
 
 .skills .carousel .card {
-  background: var(--dark);
-  border-radius: 6px;
-  padding: 25px 35px;
-  text-align: center;
-  overflow: hidden;
-  transition: all 0.4s ease;
+  /*  */
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  transform-style: preserve-3d;
 }
 
-.skills .carousel .card:hover {
-  background: var(--primaryColor);
-}
 
 .skills .carousel .card .box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease;
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: var(--dark);
+  border-radius: 20px;
+  transform-style: preserve-3d;
 }
 
-.skills .carousel .card:hover .box {
-  transform: scale(1.05);
-}
-
-.skills .carousel .card:hover .box div {
+.skills .carousel .card .box::before {
+  content: "React";
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 5em;
+  font-weight: 900;
   color: var(--white);
+  font-style: italic;
+  opacity: 0;
+  transition: 0.5s ease;
 }
 
-.skills .carousel .card .text {
-  font-size: 25px;
-  font-weight: 500;
-  margin: 10px 0 7px 0;
-  color: var(--primaryColor);
-  font-family: inherit;
+.skills .carousel .card .box:hover::before {
+  opacity: 0.04;
 }
 
-.skills .carousel .card img {
-  height: 150px;
-  width: 150px;
-  object-fit: cover;
+.skills .carousel .card .box .name {
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+  color: var(--white);
+  width: 100%;
+  transform-style: preserve-3d;
+  transform: translate3d(0, 0, 75px);
+  transition: 0.5s ease;
+  opacity: 0;
+  z-index: 10;
+}
+
+.skills .carousel .card .box:hover .name {
+  top: 40px;
+  opacity: 1;
+}
+
+.skills .carousel .card .box .circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
-  border: 5px solid var(--primaryColor);
-  transition: all 0.3s ease;
+  transition: 0.5s ease;
+  background-color: var(--white);
+  transform-style: preserve-3d;
+  z-index: 10;
+  transform: translate3d(-50%, -50%, 50px);
+  opacity: 1;
 }
 
-.skills .carousel .card:hover img {
-  border-color: var(--white);
+.skills .carousel .card .box .img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  max-width: 300px;
+  z-index: 15;
+  transition: all 0.5s ease;
+  transform-style: preserve-3d;
+  transform: translate3d(-50%, -50%, 50px) rotate(-15deg);
+}
+
+.skills .carousel .card .box:hover .img {
+  transform: translate3d(-50%, -50%, 100px) rotate(-15deg);
+}
+
+.skills .carousel .react .circle {
+  background-color: blue !important;
 }
 
 .owl-dots {
@@ -93,4 +133,11 @@
 .owl-dot.active,
 .owl-dot:hover {
   background: var(--primaryColor) !important;
+}
+
+
+@media (max-width: 947px) {
+  .skills .skills-content .column {
+    width: 100%;
+  }
 }
