--- a/css/projects.css
+++ b/css/projects.css
@@ -14,22 +14,17 @@
   background: var(--white);
 }
 
-.projects #web .title::after {
+.projects #FrontEnd .title::after {
   background: var(--dark);
-  content: "Web";
+  content: "FrontEnd";
 }
 
-.projects #react .title::after {
+.projects #FullStack .title::after {
   background: var(--dark);
-  content: "React";
+  content: "FullStack";
 }
 
-.projects #fullstack .title::after {
-  background: var(--dark);
-  content: "Fullstack";
-}
-
-.projects #mobile .title::after {
+.projects #Mobile .title::after {
   background: var(--dark);
   content: "Mobile";
 }
@@ -41,139 +36,94 @@
   flex-direction: column;
 }
 
-.swiper-container {
+.projects .swiper-container {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
-.swiper-slide {
-  background-position: center;
-  background-size: cover;
+.projects .swiper-slide {
   width: 250px;
   height: 400px;
+  border-radius: 20px;
+  border: 2px solid var(--primaryColor);
+  background-color: #353230;
+  box-shadow: 2px 2px 50px 10px rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: 2px 2px 50px 10px rgba(255, 255, 255, 0.2);
+  -moz-box-shadow: 2px 2px 50px 10px rgba(255, 255, 255, 0.2);
+  overflow: hidden;
 }
 
-.projects .card {
+.projects .swiper-slide .image {
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-columns: 250px;
-  grid-template-rows: 200px 150px 50px;
-  grid-template-areas: "image""text""stats";
-  border-radius: 18px;
-  background: var(--white);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
-  font-family: roboto;
-  text-align: center;
-  transition: 2s ease-in-out;
-}
-
-.projects .card:hover {
-  transform: scale(1.05);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
-}
-
-.projects .card-image {
-  grid-area: image;
-}
-
-.projects .card-text {
-  grid-area: text;
-}
-
-.projects .card-stats {
-  grid-area: stats;
-}
-
-.projects .card-image {
-  border-bottom: 3px solid var(--dark);
-  grid-area: image;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  background-size: cover;
+  /* დროებითი */
+  /* height: 30%; */
+  border-bottom: none;
+  background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--primaryColor);
+  font-size: 24px;
+  font-family: "Akaya Kanadaka", cursive;
+  transition: all 0.4s ease-in-out;
+}
+
+.projects .swiper-slide.swiper-slide-active:hover .image {
+  height: 30%;
+  border-bottom: 2px solid var(--primaryColor);
+}
+
+.projects .swiper-slide .content {
   position: relative;
+  height: 70%;
 }
 
-.projects .card-image p {
+
+.projects .swiper-slide .content .link {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.6);
-  border-radius: 50%;
-  padding: 5px;
-  left: 10px;
-  top: 10px;
-  font-size: 24px;
-  font-weight: 900;
-  color: var(--primaryColor);
+  bottom: 20px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-.projects .card-text {
-  grid-area: text;
-  margin: 10px;
-  cursor: default;
-}
-
-.projects .card-text p {
-  color: var(--grey);
-  font-size: 15px;
-  font-weight: 300;
-}
-
-.projects .card-text div ul {
-  color: var(--primaryColor);
-}
-
-.projects .card-text ul li {
-  color: var(--primaryColor);
+.projects .swiper-slide .content a {
   display: inline-block;
-}
-
-.projects .card-text h2 {
-  margin-top: 0px;
-  font-size: 24px;
-  color: var(--dark);
-  margin-bottom: 10px;
-}
-
-.projects .card-stats {
-  grid-area: stats;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  white-space: nowrap;
   background: var(--primaryColor);
-  cursor: default;
-}
-
-.projects .card-stats .stat {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.projects .card-stats .stat a {
-  color: inherit;
-  display: flex;
-  font-size: 18px;
-  font-weight: 600;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
   color: var(--white);
+  font-size: 18px;
+  padding: 6px 20px;
+  font-weight: 400;
+  border-radius: 6px;
+  border: 2px solid var(--primaryColor);
+  transition: all 0.3s ease;
 }
 
-.projects .card-stats .stat:first-child {
-  border-right: 2px solid var(--white);
+.projects .swiper-slide .content a:hover {
+  color: var(--primaryColor);
+  background: none;
 }
 
-.projects .card-stats .stat a img {
-  margin-right: 10px;
-  width: 20px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .projects .view-all {
   display: inline-block;
@@ -192,3 +142,5 @@
   color: var(--primaryColor);
   background: none;
 }
+
+@media (max-width: 690px) {}
