--- a/css/projects.css
+++ b/css/projects.css
@@ -46,7 +46,6 @@
   width: 250px;
   height: 400px;
   border-radius: 20px;
-  border: 2px solid var(--primaryColor);
   background-color: #353230;
   box-shadow: 2px 2px 50px 10px rgba(255, 255, 255, 0.2);
   -webkit-box-shadow: 2px 2px 50px 10px rgba(255, 255, 255, 0.2);
@@ -57,8 +56,6 @@
 .projects .swiper-slide .image {
   width: 100%;
   height: 100%;
-  /* დროებითი */
-  /* height: 30%; */
   border-bottom: none;
   background-repeat: no-repeat;
   background-position: center;
@@ -66,10 +63,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.5s ease-in-out;
+}
+
+.projects .swiper-slide .image h3 {
   color: var(--primaryColor);
-  font-size: 24px;
+  font-size: 36px;
+  font-weight: 700;
   font-family: "Akaya Kanadaka", cursive;
-  transition: all 0.4s ease-in-out;
+  padding: 7px 12px;
+  background-color: #353230;
+  border-radius: 6px;
+  border: 2px solid var(--primaryColor);
 }
 
 .projects .swiper-slide.swiper-slide-active:hover .image {
@@ -80,8 +85,25 @@
 .projects .swiper-slide .content {
   position: relative;
   height: 70%;
+  padding: 20px;
+  text-align: center;
 }
 
+.projects .swiper-slide .content h4 {
+  font-size: 18px;
+  font-family: 'Noto Sans Mono', monospace;
+  color: var(--primaryColor);
+  font-weight: 700;
+}
+
+.projects .swiper-slide .content span {
+  color: var(--white);
+  font-size: 13px;
+}
+
+.projects .swiper-slide .content .description {
+  margin-bottom: 15px;
+}
 
 .projects .swiper-slide .content .link {
   position: absolute;
@@ -96,7 +118,7 @@
   background: var(--primaryColor);
   color: var(--white);
   font-size: 18px;
-  padding: 6px 20px;
+  padding: 6px 25px;
   font-weight: 400;
   border-radius: 6px;
   border: 2px solid var(--primaryColor);
@@ -107,22 +129,6 @@
   color: var(--primaryColor);
   background: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .projects .view-all {
@@ -142,5 +148,3 @@
   color: var(--primaryColor);
   background: none;
 }
-
-@media (max-width: 690px) {}
