--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ html {
 
 body {
   background-color: var(--dark);
+  font-family: 'Noto Sans Mono', monospace;
 }
 
 /* all similar content styling codes */
@@ -54,7 +55,7 @@ section {
 .teams,
 .contact,
 footer {
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
 }
 
 .about .about-content,
