--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,6 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: start;
   color: var(--white);
   position: relative;
   overflow: hidden;
@@ -19,7 +18,6 @@
 }
 
 .home .video-container video {
-  min-width: 100%;
   min-height: 100%;
   position: absolute;
   top: 50%;
@@ -45,7 +43,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-image: linear-gradient(45deg, rgba(0, 0, 0, .3) 50%, rgba(0, 0, 0, .7) 50%);
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, .7) 50%);
   background-size: 3px 3px;
   z-index: 2;
 }
@@ -71,12 +69,12 @@
 
 .home .home-content .text-3 {
   font-size: 40px;
-  margin: 5px 0;
 }
 
 .home .home-content span {
   color: var(--primaryColor);
   font-size: 40px;
+  font-family: "Akaya Kanadaka", cursive;
 }
 
 .home .glass {
@@ -95,8 +93,30 @@
   background-size: contain;
 }
 
-@media (max-width: 1300px) {
-  .home .max-width {
-    margin-left: 0px;
+@media (max-width: 600px) {
+  .home {
+    justify-content: center
+  }
+
+  .home .home-content {
+    margin: 0;
+    width: 250px;
+    height: 300px;
+  }
+
+  .home .home-content {
+    font-size: 22px;
+  }
+
+  .home .home-content .text-2 {
+    font-size: 48px;
+  }
+
+  .home .home-content .text-3 {
+    font-size: 26px;
+  }
+
+  .home .home-content span {
+    font-size: 32px;
   }
 }
