--- a/css/footer.css
+++ b/css/footer.css
@@ -8,5 +8,5 @@ footer {
 
 footer p a {
   color: var(--dark);
-  font-family: "Akaya Kanadaka", cursive;
+  font-family: 'Finger Paint', cursive;
 }
