--- a/css/home.css
+++ b/css/home.css
@@ -14,7 +14,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: url('./https://traversymedia.com/downloads/cover.jpg') no-repeat center center/cover;
+  background: url('https://picsum.photos/200/300') no-repeat center center/cover;
 }
 
 .home .video-container video {
@@ -65,6 +65,7 @@
 
 .home .home-content .text-2 {
   font-size: 75px;
+  font-family: 'Finger Paint', cursive;
 }
 
 .home .home-content .text-3 {
@@ -74,7 +75,7 @@
 .home .home-content span {
   color: var(--primaryColor);
   font-size: 40px;
-  font-family: "Akaya Kanadaka", cursive;
+  font-family: 'Finger Paint', cursive;
 }
 
 .home .glass {
@@ -91,6 +92,13 @@
   z-index: -1;
   border-radius: 30px;
   background-size: contain;
+}
+
+
+@media (max-width: 900px) {
+  .home .video-container video {
+    display: none;
+  }
 }
 
 @media (max-width: 600px) {
