--- a/css/navigation.css
+++ b/css/navigation.css
@@ -3,8 +3,8 @@
   width: 100%;
   z-index: 999;
   padding: 35px 0;
-  font-family: "Ubuntu", sans-serif;
   transition: all 0.4s ease;
+  font-family: 'Poppins', sans-serif;
 }
 
 .navbar.sticky {
@@ -22,7 +22,7 @@
   color: var(--white);
   font-size: 45px;
   font-weight: 600;
-  font-family: "Akaya Kanadaka", cursive;
+  font-family: 'Finger Paint', cursive;
   transition: all 0.3s ease;
   border: 2px solid transparent;
   border-radius: var(--borderCorner);
@@ -47,7 +47,6 @@
   color: var(--white);
   font-size: 30px;
   font-weight: 600;
-  font-family: "Akaya Kanadaka", cursive;
 }
 
 .navbar.sticky .logo a:hover {
@@ -149,7 +148,7 @@
 
   .navbar .menu li a {
     display: inline-block;
-    margin: 20px 0;
-    font-size: 25px;
+    margin: 10px 0;
+    font-size: 18px;
   }
 }
