--- a/css/resume.css
+++ b/css/resume.css
@@ -1,15 +1,51 @@
 .resume {
   background-color: var(--white);
   min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
-.resume .contact-content {
+.resume .max-width {
+  width: 100%;
+}
+
+.resume .resume-content {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+.resume .pdf {
+  width: 100%;
+  height: 400px;
+  background-color: violet;
+  overflow: hidden;
+}
+
+.resume .pdf iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .resume .title::after {
   content: "resume me";
+}
+
+.resume .download {
+  margin-top: 50px;
+  display: inline-block;
+  background: var(--primaryColor);
+  color: var(--white);
+  font-size: 25px;
+  padding: 12px 36px;
+  font-weight: 400;
+  border-radius: 6px;
+  border: 2px solid var(--primaryColor);
+  transition: all 0.3s ease;
+}
+
+.resume .download:hover {
+  color: var(--primaryColor);
+  background: none;
 }
