--- a/css/home.css
+++ b/css/home.css
@@ -1,13 +1,14 @@
 .home {
   height: 100vh;
   display: flex;
-  align-items: center;
+  justify-content: center;
   color: var(--white);
   position: relative;
   overflow: hidden;
+  padding: 0;
 }
 
-.home .video-container {
+.home .cover-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -17,7 +18,7 @@
   background: url('https://picsum.photos/200/300') no-repeat center center/cover;
 }
 
-.home .video-container video {
+.home .cover-container video {
   min-height: 100%;
   position: absolute;
   top: 50%;
@@ -26,7 +27,7 @@
   object-fit: cover;
 }
 
-.home .video-container:after {
+.home .cover-container:after {
   content: '';
   z-index: 1;
   height: 100%;
@@ -38,7 +39,7 @@
 }
 
 .home .overlay {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   position: absolute;
   top: 0;
@@ -48,83 +49,39 @@
   z-index: 2;
 }
 
-.home .home-content {
-  margin: auto 0 auto 100px;
+.home .canvas {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 2;
-  width: 330px;
-  height: 400px;
+}
+
+.home .text-container {
+  align-self: flex-end;
+  margin-bottom: 50px;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.home .home-content {
-  font-size: 27px;
-}
-
-.home .home-content .text-2 {
-  font-size: 75px;
+  font-size: 64px;
+  color: var(--white);
   font-family: 'Finger Paint', cursive;
 }
 
-.home .home-content .text-3 {
-  font-size: 40px;
-}
-
-.home .home-content span {
+.home .text-container .typing,
+.home .text-container .typed-cursor {
   color: var(--primaryColor);
-  font-size: 40px;
-  font-family: 'Finger Paint', cursive;
 }
 
-.home .glass {
-  position: relative;
-  background: linear-gradient(135deg, rgba(255, 255, 255, 55%), rgba(255, 255, 255, 7%));
-  border-radius: 30px;
-  box-shadow: 10px 10px 20px rgba(0 0 0 / .24);
-}
-
-.home .glass::before {
-  position: absolute;
-  content: '';
-  inset: 0;
-  z-index: -1;
-  border-radius: 30px;
-  background-size: contain;
-}
-
-
-@media (max-width: 900px) {
-  .home .video-container video {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .home {
-    justify-content: center
+@media (max-width: 1000px) {
+  .home .cover-container video {
+    /* display: none; */
   }
 
-  .home .home-content {
-    margin: 0;
-    width: 250px;
-    height: 300px;
-  }
-
-  .home .home-content {
+  .home .text-container {
     font-size: 22px;
-  }
-
-  .home .home-content .text-2 {
-    font-size: 48px;
-  }
-
-  .home .home-content .text-3 {
-    font-size: 26px;
-  }
-
-  .home .home-content span {
-    font-size: 32px;
   }
 }
