--- a/css/home.css
+++ b/css/home.css
@@ -8,18 +8,19 @@
   padding: 0;
 }
 
-.home .cover-container {
+/* .home .cover-container {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: url('https://picsum.photos/200/300') no-repeat center center/cover;
-}
+  background: url('../uploads/cover1.jpg') no-repeat center center/cover;
+} */
 
 .home .cover-container video {
   min-height: 100%;
+  min-width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -69,6 +70,8 @@
   font-size: 64px;
   color: var(--white);
   font-family: 'Finger Paint', cursive;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .home .text-container .typing,
@@ -77,11 +80,240 @@
 }
 
 @media (max-width: 1000px) {
-  .home .cover-container video {
-    /* display: none; */
-  }
-
   .home .text-container {
     font-size: 22px;
+  }
+}
+
+
+
+
+
+.lamp {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+z-index: 10;
+  height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  min-width: 100vw;
+  z-index: -1;
+}
+
+.lava {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.blob {
+  border-radius: 50%;
+  /* background: #661BAC; */
+  /* Other sample colors: */
+  background: var(--primaryColor);
+  /* background: #EA3281 ;*/
+  /* background: #E71669; */
+  /* background: #661BAC; */
+  /* background: #FDC600 ;*/
+  /* background green: #75AC25 ;*/
+  /* background blue: #3283B5 ;*/
+  /* background blue: #0A5D9A ;*/
+  /* background: #232F37 ;*/
+  /* background: #1B2735 ;*/
+  /* background: #090a0f ;*/
+
+ 
+  position: absolute;
+}
+
+
+
+.blob.top {
+  border-radius: 50%;
+  width: 100%;
+  height: 4%;
+  top: -3%;
+  left: 0;
+
+}
+
+.blob.bottom {
+  border-radius: 50%;
+  width: 100%;
+  height: 4%;
+  bottom: -3%;
+  left: 0;
+}
+
+.blob:nth-child(1) {
+  width: 200px;
+  height: 200px;
+  left: 35%;
+  bottom: -15%;
+
+  animation: wobble 4s ease-in-out alternate infinite, blob-one ease-in-out 13s infinite;
+}
+
+.blob:nth-child(2) {
+  width: 330px;
+  height: 330px;
+  right: 24%;
+  bottom: -65%;
+
+  animation: wobble 5s ease-in-out alternate infinite, blob-two ease-in-out 22s infinite;
+
+
+
+}
+
+.blob:nth-child(3) {
+  width: 150px;
+  height: 150px;
+  bottom: -15%;
+  left: 34%;
+
+  animation: wobble 6s ease-in-out alternate infinite, blob-three ease-in-out 16s infinite;
+}
+
+.blob:nth-child(4) {
+  width: 235px;
+  height: 235px;
+  bottom: -19%;
+  left: 30%;
+
+  animation: wobble 7s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
+}
+
+.blob:nth-child(4) {
+  width: 235px;
+  height: 235px;
+  bottom: -19%;
+  left: 30%;
+  animation: wobble 8s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
+}
+
+.blob:nth-child(5) {
+  width: 55px;
+  height: 55px;
+  bottom: -25%;
+  left: 34%;
+
+  animation: wobble 9s ease-in-out alternate infinite, blob-five ease-in-out 32s infinite;
+}
+
+.blob:nth-child(6) {
+  width: 35px;
+  height: 35px;
+  bottom: -25%;
+  right: 34%;
+
+  animation: wobble 10s ease-in-out alternate infinite, blob-six ease-in-out 12s infinite;
+}
+
+.blob:nth-child(7) {
+  width: 435px;
+  height: 435px;
+  bottom: -85%;
+  right: 40%;
+
+  animation: wobble 11s ease-in-out alternate infinite, blob-seven ease-in-out 32s infinite;
+}
+
+@keyframes blob-one {
+
+  0%,
+  100% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-700%);
+  }
+}
+
+@keyframes blob-two {
+
+  0%,
+  100% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-420%);
+  }
+}
+
+@keyframes blob-three {
+
+  0%,
+  100% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-305%);
+  }
+}
+
+@keyframes blob-four {
+
+  0%,
+  100% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-605%);
+  }
+}
+
+@keyframes blob-five {
+
+  0%,
+  100% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-700%);
+  }
+}
+
+@keyframes blob-six {
+
+  0%,
+  100% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-700%);
+  }
+}
+
+@keyframes blob-seven {
+
+  0%,
+  100% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-300%);
+  }
+}
+
+
+@keyframes wobble {
+  50% {
+    border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
+  }
+
+  100% {
+    border-radius: 38% 52% 75% 36% / 50% 40% 50% 60%;
   }
 }
