--- a/css/navigation.css
+++ b/css/navigation.css
@@ -64,17 +64,17 @@
 
 .navbar .menu li a {
   display: block;
-  color: var(--white);
+  color: var(--primaryColor);
   font-size: 17px;
-  font-weight: 500;
-  padding: 3px 10px;
+  padding: 3px 6px;
   transition: all 0.3s ease;
   border: 2px solid transparent;
-  border-radius: var(--borderCorner);
+  border-radius: 6px;
 }
 
 .navbar.sticky .menu li a {
   font-size: 18px;
+  color: var(--white);
 }
 
 .navbar .menu li a:hover {
@@ -87,10 +87,15 @@
   border: 2px solid var(--white);
 }
 
-/* menu btn styling */
 .navbar .menu-btn {
   cursor: pointer;
   display: none;
+}
+
+.navbar.sticky .menu-btn .bar1,
+.navbar.sticky .menu-btn .bar2,
+.navbar.sticky .menu-btn .bar3 {
+  background-color: var(--white);
 }
 
 .navbar .menu-btn .bar1,
@@ -98,7 +103,7 @@
 .navbar .menu-btn .bar3 {
   width: 25px;
   height: 3px;
-  background-color: var(--white);
+  background-color: var(--primaryColor);
   margin: 6px 0;
   transition: 0.4s;
   border-radius: var(--borderCorner);
@@ -118,9 +123,7 @@
   transform: rotate(45deg) translate(-7px, -5px);
 }
 
-
-
-@media (max-width: 947px) {
+@media (max-width: 1000px) {
   .navbar .menu-btn {
     display: block;
     z-index: 999;
