--- a/css/projects.css
+++ b/css/projects.css
@@ -43,8 +43,8 @@
 }
 
 .projects .swiper-slide {
-  width: 250px;
-  height: 400px;
+  width: 270px;
+  height: 450px;
   border-radius: 20px;
   background-color: #353230;
   box-shadow: 2px 2px 50px 10px rgba(255, 255, 255, 0.2);
@@ -94,10 +94,14 @@
 .projects .swiper-slide .content span {
   color: var(--white);
   font-size: 13px;
+  
 }
 
 .projects .swiper-slide .content .description {
   margin-bottom: 15px;
+}
+.projects .swiper-slide .content .technology {
+ text-transform: capitalize;
 }
 
 .projects .swiper-slide .content .link {
