--- a/css/navigation.css
+++ b/css/navigation.css
@@ -4,12 +4,13 @@
   z-index: 999;
   padding: 35px 0;
   transition: all 0.4s ease;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Finger Paint', cursive;
 }
 
 .navbar.sticky {
   padding: 15px 0;
   background: var(--primaryColor);
+  /* font-family: 'Poppins', sans-serif; */
 }
 
 .navbar .max-width {
