--- a/css/services.css
+++ b/css/services.css
@@ -158,11 +158,11 @@
 
 .services .option.activeServ .text {
   position: absolute;
-  top: -300px;
+  top: -355px;
+  left: -25px;
   padding: 50px;
   color: black;
   font-size: 20px;
-
   text-indent: 20px;
   text-align: justify;
 }
